--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "scripts": {
+      "postinstall": "./.bower-postinstall.sh"
+  }
 }
